Update pcap-question-revision notebook with notes from seconds PCAP mock series test 1

--- a/python3_pcap-question-revision.ipynb
+++ b/python3_pcap-question-revision.ipynb
@@ -1202,9 +1202,279 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ce695c4",
+   "metadata": {},
+   "source": [
+    "## `Math.ceil()` and negative numbers\n",
+    "The `Math.ceil()` function rounds the given number __up__ to the next integer. Bear in mind that this means for negative numbers the number will round closer to zero on a number line (as opposed to further from 0 with positive numbers). \n",
+    "\n",
+    "For example `Math.ceil(9.3)` will round up to `10` (further from 0 on a number line) and `Math.ceil(-3.8)` will round up to `-3` (closer to 0 on a number line)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "23fe30be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "-3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math as m\n",
+    "\n",
+    "print(m.ceil(9.3))\n",
+    "print(m.ceil(-3.8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a033c89",
+   "metadata": {},
+   "source": [
+    "## Factorial refresher\n",
+    "The factorial of a *number* is the product of all whole numbers from said *number* down to one. The factorial symbol is a number followed by an exclamation: `n!`.\n",
+    "\n",
+    "Number|Factorial description|Factorial\n",
+    ":--|:--|:--\n",
+    "`2!`|`2x1`|`2`\n",
+    "`3!`|`3x2x1`|`6`\n",
+    "`8!`|`8x7x6x5x4x3x2x1`|`40320`\n",
+    "\n",
+    "The `Math.factorial()` function can be used to calculate this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d7cdce6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40320\n",
+      "40320\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(m.factorial(8))\n",
+    "print(8*7*6*5*4*3*2*1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e57a7db",
+   "metadata": {},
+   "source": [
+    "## `isinstance()` includes inheritance\n",
+    "The `isinstance` function doesn't *only* check if an object was instantiated by a given class, it will also return `True` if the object was instantiated by a subclass of the given class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e52c8ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    pass\n",
+    "\n",
+    "class B(A):\n",
+    "    pass\n",
+    "\n",
+    "class C(B):\n",
+    "    pass\n",
+    "\n",
+    "obj = C()\n",
+    "print(isinstance(obj, A))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab7a016e",
+   "metadata": {},
+   "source": [
+    "## `write` mode will overwrite file content upon opening\n",
+    "Any of the `write` modes (`w`, `w+`) will immediately overwrite an existing file's content. Meaning that as soon as you call the `open()` function with one of the write modes, if the file exists any content is erased regardless of whether or not you call the `.write()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2a9c066f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"existing.txt\", \"w\") # any existing content in the file is now gone\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed3b526c",
+   "metadata": {},
+   "source": [
+    "## `ASCII` is a subset of `UTF-8`\n",
+    "While ostensibly a *standard* and an *encoding* respectively, these days `ASCII` is considered a subset of `UTF-8`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6668f1ed",
+   "metadata": {},
+   "source": [
+    "## String comparison and code points\n",
+    "Numbers have lower code points (smaller numbers) than letters, and capital letters have lower code points than lowercase letters.\n",
+    "\n",
+    "In other words `ord(\"1\")`<`ord(\"A\")`<`ord(\"a\")`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "84aa89d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n",
+      "65\n",
+      "97\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ord(\"1\"))\n",
+    "print(ord(\"A\"))\n",
+    "print(ord(\"a\"))\n",
+    "print(ord(\"1\")<ord(\"A\")<ord(\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff7b3ae9",
+   "metadata": {},
+   "source": [
+    "## When slicing, the second index is always exclusive\n",
+    "Regardless of whether using negative indexing or otherwise, the second index of a slice is __always exclusive__ of the number at that index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9aee0b1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd\n",
+      "def\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"abcdefg\"\n",
+    "# indices for above are \"0123456\" \n",
+    "print(a[0:4])\n",
+    "print(a[-4:-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf2e6857",
+   "metadata": {},
+   "source": [
+    "## The `__dict__` attribute only includes attributes *FOR* object\n",
+    "When accessing the `__dict__` attribute of an object, bear in mind that the dictionary will include only attributes specifically for that object (i.e. it will NOT include class variables)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ea1c73f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'i_var': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NewClass:\n",
+    "    c_var = 1\n",
+    "    def __init__(self):\n",
+    "        self.i_var = 2\n",
+    "    \n",
+    "new_obj = NewClass()\n",
+    "\n",
+    "print(new_obj.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eeedb1d",
+   "metadata": {},
+   "source": [
+    "## Using `try`/`except` within a `for` loop\n",
+    "You can use a `try`/`except` within a `for` loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "78ba1336",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Plop! \n",
+      "Plop! Plop! \n",
+      "Plop! Plop! Plop! \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    try:\n",
+    "        print(\"Plop! \"*i)\n",
+    "    except Exception as e:\n",
+    "        print(e)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ba83fdd",
+   "id": "7a6dfa26",
    "metadata": {},
    "outputs": [],
    "source": []
