Update pcap-question-revision notebook with mock test 2 and 3 notes

--- a/python3_pcap-question-revision.ipynb
+++ b/python3_pcap-question-revision.ipynb
@@ -1206,15 +1206,17 @@
    "id": "6ce695c4",
    "metadata": {},
    "source": [
-    "## `Math.ceil()` and negative numbers\n",
+    "## `Math.ceil()` & `Meth.floor()` and negative numbers\n",
     "The `Math.ceil()` function rounds the given number __up__ to the next integer. Bear in mind that this means for negative numbers the number will round closer to zero on a number line (as opposed to further from 0 with positive numbers). \n",
     "\n",
-    "For example `Math.ceil(9.3)` will round up to `10` (further from 0 on a number line) and `Math.ceil(-3.8)` will round up to `-3` (closer to 0 on a number line)."
+    "For example `Math.ceil(9.3)` will round up to `10` (further from 0 on a number line) and `Math.ceil(-3.8)` will round up to `-3` (closer to 0 on a number line).\n",
+    "\n",
+    "Conversely, `Math.floor()` rounds __down__ to the next integer. So for a positive number it will bring the number *closer* to `0` on a number line but for negative numbers it will push the integer further away from `0`. For example `Math.floor(6.4)` will round down to `6` but `Math.floor(-6.4)` will round down to `-7`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "23fe30be",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1225,9 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "-3\n"
+      "-3\n",
+      "6\n",
+      "-7\n"
      ]
     }
    ],
@@ -1231,7 +1235,9 @@
     "import math as m\n",
     "\n",
     "print(m.ceil(9.3))\n",
-    "print(m.ceil(-3.8))"
+    "print(m.ceil(-3.8))\n",
+    "print(m.floor(6.4))\n",
+    "print(m.floor(-6.4))"
    ]
   },
   {
@@ -1472,9 +1478,364 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f1c3bd2",
+   "metadata": {},
+   "source": [
+    "## Be mindful of Invoking a superclass' constructor *after* instantiating vars\n",
+    "If invoking a superclass' init method directly within a subclass, it's advisable to do so before setting any variables as if any of the variables have the same name as vars within the superclass' constructor they will be overwritten with the values provided by said constructor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f214c2a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SuperClass:\n",
+    "    def __init__(self):\n",
+    "        self.var_1 = 1\n",
+    "        self.var_2 = 2\n",
+    "        \n",
+    "class SubClass(SuperClass):\n",
+    "    def __init__(self):\n",
+    "        self.var_1 = 3\n",
+    "        self.var_2 = 4\n",
+    "        super().__init__()\n",
+    "\n",
+    "        \n",
+    "sub_obj = SubClass()\n",
+    "\n",
+    "print(sub_obj.var_1, sub_obj.var_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "522e9487",
+   "metadata": {},
+   "source": [
+    "## A reverse slice using only negative indices without a reverse step\n",
+    "As we know, using negative indices for a slice is valid. However, be aware that if you try to slice in reverse (i.e. with a larger negative index as the start and smaller negative as the end) you also need to use a negative step. Otherwise you will get an empty string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "276d5437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My reversed string: \n",
+      "My ACTUAL reversed string: gfe\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"abcdefg\"\n",
+    "b = a[-1:-4] # no step\n",
+    "print(\"My reversed string:\", b)\n",
+    "c = a[-1:-4:-1] # negative 1 step (i.e. going backward 1 step digit at a time)\n",
+    "print(\"My ACTUAL reversed string:\", c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3777380",
+   "metadata": {},
+   "source": [
+    "## Defining a class method without the `self` parameter\n",
+    "If you define a class method without passing the `self` parameter the method can only successfully invoked directly by the class e.g. `Class.method()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "88ff562c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wahoo!\n",
+      "my_func() takes 0 positional arguments but 1 was given\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def my_func():\n",
+    "        print(\"Wahoo!\")\n",
+    "        \n",
+    "my_obj = MyClass()\n",
+    "MyClass.my_func() # invoking the function with the class (will work)\n",
+    "try:\n",
+    "    my_obj.my_func() # invoking the function from an object (won't work)\n",
+    "except TypeError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93fafc93",
+   "metadata": {},
+   "source": [
+    "## The `random` function, if seeded with same value on same machine, will return same values\n",
+    "Although the `random()` function from the `random` module is *pseudo*-random, if you seed it with the same value on the same machine you will get the same values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bb087d9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8444218515250481\n",
+      "0.7579544029403025\n",
+      "0.420571580830845\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as r\n",
+    "\n",
+    "r.seed(0)\n",
+    "\n",
+    "for i in range(3):\n",
+    "    print(r.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1251aa6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8444218515250481\n",
+      "0.7579544029403025\n",
+      "0.420571580830845\n"
+     ]
+    }
+   ],
+   "source": [
+    "r.seed(0)\n",
+    "\n",
+    "for i in range(3):\n",
+    "    print(r.random())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c33b5b0",
+   "metadata": {},
+   "source": [
+    "## The `__name__` variable gets its value depending on how it is executed\n",
+    "If we have a two files as follows:\n",
+    "- `subfile.py` containing `print(__name__)`\n",
+    "- `mainfile.py` containing `import subfile`\n",
+    "\n",
+    "And we run `mainfile.py`, the result printed to the console will be `subfile` even though the output was trigger by the currently running file (imports implicitly execute) since the invokation of the print function is within subfile, that's where the `__name__` variable is pulled from. If we had run `subfile` directly, the output would've been `__main__`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ea0d65",
+   "metadata": {},
+   "source": [
+    "## Inheritance succession\n",
+    "When creating a subclass which inherits from two or more class which are themselves related through inheritance, you need to make sure the higher class up the chain is passed *after* the closer class. Otherwise a __method resolution order__ will be unclear and a `TypeError` raised.\n",
+    "\n",
+    "One way to look at it is like the floors of a building. The 1st floor is built upon the ground floor, the second floor upon the first. If you're taking an elevator from the second floor, you need to pass the first floor before you can reach the ground floor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "0388d3f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GroundFloor:\n",
+    "    pass\n",
+    "\n",
+    "class FirstFloor(GroundFloor):\n",
+    "    pass\n",
+    "\n",
+    "class SecondFloor(FirstFloor, GroundFloor):\n",
+    "    pass\n",
+    "\n",
+    "class ThirdFloor(SecondFloor, FirstFloor):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce6aaf34",
+   "metadata": {},
+   "source": [
+    "The elevator analogy gets a little murky when we start mixing around the multiple inheritance and skipping levels.\n",
+    "\n",
+    "Let's try a geekier analogy. Look at the below list of *Star Trek* characters. Each character has a line of succession with their immediate superior being listed first in parentheses. If we try to change it so that, for example, Lt Cmdr Data reports to Cpt Picard *before* Cmdr Riker we'll get an error. However, we could have Data report to Cpt Sisko first since he's not a member of Sisko's crew and thus doesn't have a direct superior before Sisko."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "0a486d24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AdmiralNachayev: # Most senior\n",
+    "    pass\n",
+    "\n",
+    "class CaptainPicard(AdmiralNachayev): # 2nd most senior, directly below Adml Nachayev\n",
+    "    pass\n",
+    "\n",
+    "class CommanderRiker(CaptainPicard): # 3rd most senior, directly below Cpt Picard\n",
+    "    pass\n",
+    "\n",
+    "class LtCommanderData(CommanderRiker, CaptainPicard): # 4th most senior, directly below Cmdr Riker\n",
+    "    pass\n",
+    "\n",
+    "class CaptainSisko(AdmiralNachayev): # 2nd most senior, directly below Adml Nachayev\n",
+    "    pass\n",
+    "\n",
+    "class CommanderWorf(CaptainSisko): # 3rd most senior, directly below Cpt Sisko\n",
+    "    pass\n",
+    "\n",
+    "class ChiefOBrien(CommanderWorf, CaptainSisko): # 4th most senior, directly below Cmdr Worf\n",
+    "    pass\n",
+    "\n",
+    "class LieutenantDax(CommanderWorf, CaptainSisko): # 4th most senior, directly below Cmdr Worf\n",
+    "    pass\n",
+    "\n",
+    "class EnsignNog(ChiefOBrien, LieutenantDax, CommanderWorf): # Most junior, directly below Chief O'Brien/Lt Dax\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1c0a011",
+   "metadata": {},
+   "source": [
+    "## The `.read()` method\n",
+    "When working with files, the `read()` method reads the file character-by-character."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "73a54e5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H| e| l| l| o|  | t| h| e| r| e| \n",
+      "| a| b| c| \n",
+      "| d| e| f| \n",
+      "| g| h| i| \n",
+      "| "
+     ]
+    }
+   ],
+   "source": [
+    "file = open(\"text.txt\")\n",
+    "for i in file.read():\n",
+    "    print(i, end=\"| \")\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0703b388",
+   "metadata": {},
+   "source": [
+    "## The `readline()` method\n",
+    "The `readline()` method will try to read a single line. Passing an integer to this method will terminate the read at the character of that index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "1556613e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H| e| l| l| o|  | t| h| e| r| e| \n",
+      "| "
+     ]
+    }
+   ],
+   "source": [
+    "file = open(\"text.txt\")\n",
+    "for i in file.readline():\n",
+    "    print(i, end=\"| \")\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ea64d91",
+   "metadata": {},
+   "source": [
+    "## The `readlines()` method\n",
+    "The `readlines()` method will try to read the entire file one line at a time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "d7efd6d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello there\n",
+      "| abc\n",
+      "| def\n",
+      "| ghi\n",
+      "| "
+     ]
+    }
+   ],
+   "source": [
+    "file = open(\"text.txt\")\n",
+    "for i in file.readlines():\n",
+    "    print(i, end=\"| \")\n",
+    "file.close()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a6dfa26",
+   "id": "4fb61f1a",
    "metadata": {},
    "outputs": [],
    "source": []
